--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <groupId>io.github.pnoker</groupId>
     <artifactId>dc3-parent</artifactId>
     <name>${project.artifactId}</name>
-    <version>2023.4.2</version>
+    <version>2023.4.3</version>
     <packaging>pom</packaging>
 
     <inceptionYear>2016-2022</inceptionYear>
@@ -60,44 +60,44 @@
         <spring.cloud.version>2021.0.7</spring.cloud.version>
 
         <!-- DC3 Center 相关 -->
-        <dc3.center.register.eureka.client.version>2023.4.2</dc3.center.register.eureka.client.version>
-        <dc3.center.register.nacos.client.version>2023.4.2</dc3.center.register.nacos.client.version>
+        <dc3.center.register.nacos.client.version>2023.4.3</dc3.center.register.nacos.client.version>
 
         <!-- DC3 Driver 相关 -->
-        <dc3.driver.sdk.version>2023.4.2</dc3.driver.sdk.version>
+        <dc3.driver.sdk.version>2023.4.3</dc3.driver.sdk.version>
 
         <!-- DC3 Common 相关 -->
-        <dc3.common.version>2023.4.2</dc3.common.version>
-        <dc3.common.web.version>2023.4.2</dc3.common.web.version>
-        <dc3.common.feign.version>2023.4.2</dc3.common.feign.version>
-        <dc3.common.mysql.version>2023.4.2</dc3.common.mysql.version>
-        <dc3.common.redis.version>2023.4.2</dc3.common.redis.version>
-        <dc3.common.mongo.version>2023.4.2</dc3.common.mongo.version>
-        <dc3.common.rabbitmq.version>2023.4.2</dc3.common.rabbitmq.version>
-        <dc3.common.mqtt.version>2023.4.2</dc3.common.mqtt.version>
-        <dc3.common.quartz.version>2023.4.2</dc3.common.quartz.version>
-        <dc3.common.thread.version>2023.4.2</dc3.common.thread.version>
-        <dc3.common.model.version>2023.4.2</dc3.common.model.version>
-        <dc3.common.public.version>2023.4.2</dc3.common.public.version>
-        <dc3.common.constant.version>2023.4.2</dc3.common.constant.version>
-        <dc3.common.exception.version>2023.4.2</dc3.common.exception.version>
-        <dc3.common.log.version>2023.4.2</dc3.common.log.version>
-        <dc3.common.api.version>2023.4.2</dc3.common.api.version>
-        <dc3.common.auth.version>2023.4.2</dc3.common.auth.version>
+        <dc3.common.version>2023.4.3</dc3.common.version>
+        <dc3.common.web.version>2023.4.3</dc3.common.web.version>
+        <dc3.common.feign.version>2023.4.3</dc3.common.feign.version>
+        <dc3.common.mysql.version>2023.4.3</dc3.common.mysql.version>
+        <dc3.common.redis.version>2023.4.3</dc3.common.redis.version>
+        <dc3.common.mongo.version>2023.4.3</dc3.common.mongo.version>
+        <dc3.common.rabbitmq.version>2023.4.3</dc3.common.rabbitmq.version>
+        <dc3.common.mqtt.version>2023.4.3</dc3.common.mqtt.version>
+        <dc3.common.quartz.version>2023.4.3</dc3.common.quartz.version>
+        <dc3.common.thread.version>2023.4.3</dc3.common.thread.version>
+        <dc3.common.model.version>2023.4.3</dc3.common.model.version>
+        <dc3.common.public.version>2023.4.3</dc3.common.public.version>
+        <dc3.common.constant.version>2023.4.3</dc3.common.constant.version>
+        <dc3.common.exception.version>2023.4.3</dc3.common.exception.version>
+        <dc3.common.log.version>2023.4.3</dc3.common.log.version>
+        <dc3.common.api.version>2023.4.3</dc3.common.api.version>
+        <dc3.common.auth.version>2023.4.3</dc3.common.auth.version>
 
         <!-- DC3 Api 相关 -->
-        <dc3.api.version>2023.4.2</dc3.api.version>
-        <dc3.api.auth.version>2023.4.2</dc3.api.auth.version>
-        <dc3.api.data.version>2023.4.2</dc3.api.data.version>
-        <dc3.api.manager.version>2023.4.2</dc3.api.manager.version>
+        <dc3.api.version>2023.4.3</dc3.api.version>
+        <dc3.api.auth.version>2023.4.3</dc3.api.auth.version>
+        <dc3.api.data.version>2023.4.3</dc3.api.data.version>
+        <dc3.api.manager.version>2023.4.3</dc3.api.manager.version>
 
         <!-- 其他依赖-->
         <spring-oauth2.version>2.5.2.RELEASE</spring-oauth2.version>
         <spring-data-mongodb.version>3.4.10</spring-data-mongodb.version>
         <spring.cloud.nacos.version>2021.0.5.0</spring.cloud.nacos.version>
-        <commons-fileupload.version>1.4</commons-fileupload.version>
+        <commons-fileupload.version>1.5</commons-fileupload.version>
         <commons.io.version>2.11.0</commons.io.version>
         <commons.lang3.version>3.12.0</commons.lang3.version>
+        <snakeyaml.version>2.0</snakeyaml.version>
         <mybatis.plus.version>3.5.3.1</mybatis.plus.version>
         <jackson.version>2.14.2</jackson.version>
         <velocity.version>2.3</velocity.version>
@@ -331,6 +331,13 @@
                 <version>${hibernate.validator.version}</version>
             </dependency>
 
+            <!-- Snake Yaml -->
+            <dependency>
+                <groupId>org.yaml</groupId>
+                <artifactId>snakeyaml</artifactId>
+                <version>${snakeyaml.version}</version>
+            </dependency>
+
             <!-- Eclipse Milo SDK Client -->
             <dependency>
                 <groupId>org.eclipse.milo</groupId>
@@ -512,13 +519,6 @@
                 <groupId>cn.hutool</groupId>
                 <artifactId>hutool-all</artifactId>
                 <version>${hutool.version}</version>
-            </dependency>
-
-            <!-- DC3 Center Register Eureka Client Starter -->
-            <dependency>
-                <groupId>io.github.pnoker</groupId>
-                <artifactId>dc3-starter-center-register-eureka-client</artifactId>
-                <version>${dc3.center.register.eureka.client.version}</version>
             </dependency>
 
             <!-- DC3 Center Register Nacos Client Starter -->
