--- a/pom.xml
+++ b/pom.xml
@@ -182,6 +182,13 @@
 
     <dependencies>
 
+        <!-- Spring Configuration-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+
         <!-- Test -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
