--- a/pom.xml
+++ b/pom.xml
@@ -53,11 +53,12 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <maven.plugin.validation>VERBOSE</maven.plugin.validation>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!-- Spring 相关-->
-        <spring.boot.version>2.7.11</spring.boot.version>
-        <spring.cloud.version>2021.0.7</spring.cloud.version>
+        <spring.boot.version>2.7.14</spring.boot.version>
+        <spring.cloud.version>2021.0.8</spring.cloud.version>
 
         <!-- DC3 Center 相关 -->
         <dc3.center.register.nacos.client.version>2023.4.5</dc3.center.register.nacos.client.version>
@@ -115,20 +116,20 @@
         <tdengine.version>3.2.2</tdengine.version>
         <modbus.version>3.1.0</modbus.version>
         <apache.poi.version>5.2.3</apache.poi.version>
-        <netty.version>4.1.90.Final</netty.version>
-        <grpc.version>1.53.0</grpc.version>
+        <netty.version>4.1.96.Final</netty.version>
+        <grpc.version>1.56.0</grpc.version>
         <grpc.spring.boot.version>2.14.0.RELEASE</grpc.spring.boot.version>
-        <protoc.version>3.22.0</protoc.version>
+        <protoc.version>3.23.4</protoc.version>
         <j.interop.version>2.0.4</j.interop.version>
         <bouncycastle.version>1.46</bouncycastle.version>
         <paho.mqttv3.version>1.2.5</paho.mqttv3.version>
         <elasticsearch.version>7.17.7</elasticsearch.version>
         <jakarta.version>2.1.1</jakarta.version>
-        <mapstruct.version>1.5.3.Final</mapstruct.version>
+        <mapstruct.version>1.5.5.Final</mapstruct.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
-        <lombok.version>1.18.26</lombok.version>
-        <guava.version>31.1-jre</guava.version>
-        <hutool.version>5.8.15</hutool.version>
+        <lombok.version>1.18.28</lombok.version>
+        <guava.version>32.1.1-jre</guava.version>
+        <hutool.version>5.8.20</hutool.version>
 
         <!-- 特殊版本 -->
         <hibernate.validator.version>6.2.5.Final</hibernate.validator.version>
@@ -139,8 +140,8 @@
         <maven.gpg.plugin>3.0.1</maven.gpg.plugin>
         <maven.source.plugin>3.2.1</maven.source.plugin>
         <maven.javadoc.plugin>3.4.1</maven.javadoc.plugin>
-        <maven.compiler.plugin>3.10.1</maven.compiler.plugin>
-        <maven.resource.plugin>3.1.0</maven.resource.plugin>
+        <maven.compiler.plugin>3.11.0</maven.compiler.plugin>
+        <maven.resource.plugin>3.3.0</maven.resource.plugin>
         <maven.nexus.plugin.version>1.6.13</maven.nexus.plugin.version>
     </properties>
 
@@ -928,8 +929,10 @@
                     <configuration>
                         <pluginId>grpc-java</pluginId>
                         <protoSourceRoot>src/main/protobuf</protoSourceRoot>
+                        <!--suppress UnresolvedMavenProperty -->
                         <protocArtifact>com.google.protobuf:protoc:${protoc.version}:exe:${os.detected.classifier}
                         </protocArtifact>
+                        <!--suppress UnresolvedMavenProperty -->
                         <pluginArtifact>io.grpc:protoc-gen-grpc-java:${grpc.version}:exe:${os.detected.classifier}
                         </pluginArtifact>
                     </configuration>
