--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <groupId>io.github.pnoker</groupId>
     <artifactId>dc3-parent</artifactId>
     <name>${project.artifactId}</name>
-    <version>2023.4.5.2</version>
+    <version>2023.4.5.3</version>
     <packaging>pom</packaging>
 
     <inceptionYear>2016-2022</inceptionYear>
@@ -61,7 +61,7 @@
         <spring.cloud.version>2021.0.8</spring.cloud.version>
 
         <!-- DC3 Center 相关 -->
-        <dc3.center.register.nacos.client.version>2023.4.5.1</dc3.center.register.nacos.client.version>
+        <dc3.center.register.nacos.client.version>2023.4.5.2</dc3.center.register.nacos.client.version>
 
         <!-- DC3 Driver 相关 -->
         <dc3.driver.sdk.version>2023.4.5</dc3.driver.sdk.version>
@@ -93,6 +93,18 @@
         <dc3.api.data.version>2023.4.5</dc3.api.data.version>
         <dc3.api.manager.version>2023.4.5</dc3.api.manager.version>
 
+        <!-- gRpc 相关 -->
+        <grpc.version>1.56.0</grpc.version>
+        <protoc.version>3.23.4</protoc.version>
+        <grpc.spring.boot.version>2.14.0.RELEASE</grpc.spring.boot.version>
+
+        <!-- 通用工具 -->
+        <mapstruct.version>1.5.5.Final</mapstruct.version>
+        <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
+        <lombok.version>1.18.28</lombok.version>
+        <guava.version>32.1.1-jre</guava.version>
+        <hutool.version>5.8.20</hutool.version>
+
         <!-- 其他依赖-->
         <spring-oauth2.version>2.5.2.RELEASE</spring-oauth2.version>
         <spring-data-mongodb.version>3.4.10</spring-data-mongodb.version>
@@ -118,19 +130,11 @@
         <modbus.version>3.1.0</modbus.version>
         <apache.poi.version>5.2.3</apache.poi.version>
         <netty.version>4.1.96.Final</netty.version>
-        <grpc.version>1.56.0</grpc.version>
-        <grpc.spring.boot.version>2.14.0.RELEASE</grpc.spring.boot.version>
-        <protoc.version>3.23.4</protoc.version>
         <j.interop.version>2.0.4</j.interop.version>
         <bouncycastle.version>1.46</bouncycastle.version>
         <paho.mqttv3.version>1.2.5</paho.mqttv3.version>
         <elasticsearch.version>7.17.7</elasticsearch.version>
         <jakarta.version>2.1.1</jakarta.version>
-        <mapstruct.version>1.5.5.Final</mapstruct.version>
-        <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
-        <lombok.version>1.18.28</lombok.version>
-        <guava.version>32.1.1-jre</guava.version>
-        <hutool.version>5.8.20</hutool.version>
 
         <!-- 特殊版本 -->
         <hibernate.validator.version>6.2.5.Final</hibernate.validator.version>
