--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <groupId>io.github.pnoker</groupId>
     <artifactId>dc3-parent</artifactId>
     <name>${project.artifactId}</name>
-    <version>2023.4.5.4</version>
+    <version>2023.4.5.5</version>
     <packaging>pom</packaging>
 
     <inceptionYear>2016-2022</inceptionYear>
@@ -60,9 +60,6 @@
         <spring.boot.version>2.7.14</spring.boot.version>
         <spring.cloud.version>2021.0.8</spring.cloud.version>
 
-        <!-- DC3 Center 相关 -->
-        <dc3.center.register.nacos.client.version>2023.4.5.2</dc3.center.register.nacos.client.version>
-
         <!-- DC3 Driver 相关 -->
         <dc3.driver.sdk.version>2023.4.5</dc3.driver.sdk.version>
 
@@ -99,6 +96,13 @@
         <protoc.version>3.23.4</protoc.version>
         <grpc.spring.boot.version>2.14.0.RELEASE</grpc.spring.boot.version>
 
+        <!-- 数据库 相关 -->
+        <influxdb.version>6.8.0</influxdb.version>
+        <elasticsearch.version>7.17.7</elasticsearch.version>
+        <mybatis.plus.version>3.5.3.2</mybatis.plus.version>
+        <mybatis.dynamic.version>4.1.3</mybatis.dynamic.version>
+        <spring-data-mongodb.version>3.4.10</spring-data-mongodb.version>
+
         <!-- 通用工具 -->
         <mapstruct.version>1.5.5.Final</mapstruct.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
@@ -108,15 +112,12 @@
 
         <!-- 其他依赖-->
         <spring-oauth2.version>2.5.2.RELEASE</spring-oauth2.version>
-        <spring-data-mongodb.version>3.4.10</spring-data-mongodb.version>
         <knife.version>4.3.0</knife.version>
         <spring.cloud.nacos.version>2021.0.5.0</spring.cloud.nacos.version>
         <commons-fileupload.version>1.5</commons-fileupload.version>
         <commons.io.version>2.11.0</commons.io.version>
         <commons.lang3.version>3.12.0</commons.lang3.version>
         <snakeyaml.version>2.0</snakeyaml.version>
-        <mybatis.plus.version>3.5.3.2</mybatis.plus.version>
-        <mybatis.dynamic.version>4.1.3</mybatis.dynamic.version>
         <jackson.version>2.14.2</jackson.version>
         <velocity.version>2.3</velocity.version>
         <jwt.version>0.9.1</jwt.version>
@@ -126,7 +127,6 @@
         <jaxb.version>3.0.2</jaxb.version>
         <activation.version>1.1.1</activation.version>
         <milo.version>0.6.8</milo.version>
-        <influxdb.version>6.8.0</influxdb.version>
         <tdengine.version>3.2.2</tdengine.version>
         <modbus.version>3.1.0</modbus.version>
         <apache.poi.version>5.2.3</apache.poi.version>
@@ -134,7 +134,6 @@
         <j.interop.version>2.0.4</j.interop.version>
         <bouncycastle.version>1.46</bouncycastle.version>
         <paho.mqttv3.version>1.2.5</paho.mqttv3.version>
-        <elasticsearch.version>7.17.7</elasticsearch.version>
         <jakarta.version>2.1.1</jakarta.version>
 
         <!-- 特殊版本 -->
@@ -225,7 +224,7 @@
 
     <dependencyManagement>
         <dependencies>
-            <!-- Spring Cloud 依赖 -->
+            <!-- Spring Boot 依赖 -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
@@ -233,6 +232,8 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+
+            <!-- Spring Cloud 依赖 -->
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
@@ -556,13 +557,6 @@
                 <groupId>cn.hutool</groupId>
                 <artifactId>hutool-all</artifactId>
                 <version>${hutool.version}</version>
-            </dependency>
-
-            <!-- DC3 Center Register Nacos Client Starter -->
-            <dependency>
-                <groupId>io.github.pnoker</groupId>
-                <artifactId>dc3-starter-center-register-nacos-client</artifactId>
-                <version>${dc3.center.register.nacos.client.version}</version>
             </dependency>
 
             <!-- Spring Cloud Nacos Client -->
