--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <groupId>io.github.pnoker</groupId>
     <artifactId>dc3-parent</artifactId>
     <name>${project.artifactId}</name>
-    <version>2024.1.0</version>
+    <version>2024.1.0.1</version>
     <packaging>pom</packaging>
 
     <inceptionYear>2016-2023</inceptionYear>
@@ -86,6 +86,7 @@
         <knife.version>4.3.0</knife.version>
         <swagger.version>2.2.9</swagger.version>
         <spring.cloud.nacos.version>2021.0.5.0</spring.cloud.nacos.version>
+        <nacos.client.version>2.3.0</nacos.client.version>
         <micrometer.version>1.12.0</micrometer.version>
         <commons-fileupload.version>1.5</commons-fileupload.version>
         <commons.io.version>2.11.0</commons.io.version>
@@ -437,6 +438,11 @@
                 <groupId>com.alibaba.cloud</groupId>
                 <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
                 <version>${spring.cloud.nacos.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba.nacos</groupId>
+                <artifactId>nacos-client</artifactId>
+                <version>${nacos.client.version}</version>
             </dependency>
 
             <!-- Micrometer Registry Prometheus -->
