--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <groupId>io.github.pnoker</groupId>
     <artifactId>dc3-parent</artifactId>
     <name>${project.artifactId}</name>
-    <version>2024.1.0.5</version>
+    <version>2024.1.0.8</version>
     <packaging>pom</packaging>
 
     <inceptionYear>2016-2023</inceptionYear>
@@ -60,26 +60,26 @@
 
         <!-- Spring 相关-->
         <spring.boot.version>2.7.18</spring.boot.version>
-        <spring.cloud.version>2021.0.8</spring.cloud.version>
+        <spring.cloud.version>2021.0.9</spring.cloud.version>
 
         <!-- gRpc 相关 -->
-        <grpc.version>1.56.0</grpc.version>
+        <grpc.version>1.58.0</grpc.version>
         <protoc.version>3.23.4</protoc.version>
-        <grpc.spring.boot.version>2.14.0.RELEASE</grpc.spring.boot.version>
+        <grpc.spring.boot.version>2.15.0.RELEASE</grpc.spring.boot.version>
 
         <!-- 数据库 相关 -->
         <influxdb.version>6.8.0</influxdb.version>
         <elasticsearch.version>7.17.7</elasticsearch.version>
-        <mybatis.plus.version>3.5.3.2</mybatis.plus.version>
-        <mybatis.dynamic.version>4.1.3</mybatis.dynamic.version>
-        <spring-data-mongodb.version>3.4.10</spring-data-mongodb.version>
+        <mybatis.plus.version>3.5.5</mybatis.plus.version>
+        <mybatis.dynamic.version>4.3.0</mybatis.dynamic.version>
+        <spring-data-mongodb.version>3.4.18</spring-data-mongodb.version>
 
         <!-- 通用工具 -->
         <mapstruct.version>1.5.5.Final</mapstruct.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
         <lombok.version>1.18.30</lombok.version>
-        <guava.version>32.1.3-jre</guava.version>
-        <hutool.version>5.8.23</hutool.version>
+        <guava.version>33.0.0-jre</guava.version>
+        <hutool.version>5.8.25</hutool.version>
 
         <!-- 其他依赖-->
         <spring-oauth2.version>2.5.2.RELEASE</spring-oauth2.version>
@@ -103,9 +103,8 @@
         <activation.version>1.1.1</activation.version>
         <milo.version>0.6.8</milo.version>
         <tdengine.version>3.2.7</tdengine.version>
-        <modbus.version>3.1.0</modbus.version>
-        <apache.poi.version>5.2.3</apache.poi.version>
-        <netty.version>4.1.100.Final</netty.version>
+        <apache.poi.version>5.2.5</apache.poi.version>
+        <netty.version>4.1.106.Final</netty.version>
         <j.interop.version>2.0.4</j.interop.version>
         <bouncycastle.version>1.76</bouncycastle.version>
         <paho.mqttv3.version>1.2.5</paho.mqttv3.version>
@@ -401,6 +400,12 @@
                 <groupId>io.netty</groupId>
                 <artifactId>netty-all</artifactId>
                 <version>${netty.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.netty</groupId>
+                <artifactId>netty-resolver-dns-native-macos</artifactId>
+                <version>${netty.version}</version>
+                <scope>runtime</scope>
             </dependency>
 
             <!-- gRpc 依赖 -->
