--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <groupId>io.github.pnoker</groupId>
     <artifactId>dc3-parent</artifactId>
     <name>${project.artifactId}</name>
-    <version>2024.1.0.9</version>
+    <version>2024.1.1.0</version>
     <packaging>pom</packaging>
 
     <inceptionYear>2016-2023</inceptionYear>
@@ -102,7 +102,7 @@
         <jaxb.version>3.0.2</jaxb.version>
         <activation.version>1.1.1</activation.version>
         <milo.version>0.6.8</milo.version>
-        <ok.http.version>4.12.0</ok.http.version>
+        <okhttp.version>4.12.0</okhttp.version>
         <tdengine.version>3.2.7</tdengine.version>
         <apache.poi.version>5.2.5</apache.poi.version>
         <netty.version>4.1.106.Final</netty.version>
@@ -464,7 +464,12 @@
             <dependency>
                 <groupId>com.squareup.okhttp3</groupId>
                 <artifactId>okhttp</artifactId>
-                <version>${ok.http.version}</version>
+                <version>${okhttp.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.squareup.okhttp3</groupId>
+                <artifactId>logging-interceptor</artifactId>
+                <version>${okhttp.version}</version>
             </dependency>
 
             <!-- Spring Cloud Nacos Client -->
